--- a/cli/src/config/package.json
+++ b/cli/src/config/package.json
@@ -47,7 +47,7 @@
     "html-minimizer-webpack-plugin": "2.1.0",
     "zlib": "1.0.5",
     "webpack-bundle-analyzer": "4.4.2",
-    "core-js": "3.18.0",
+    "core-js": "^3.25.5",
     "mockjs": "1.1.0",
     "babel-plugin-import": "1.13.3",
     "@vue/compiler-sfc": "3.2.19",
