--- a/core/package.json
+++ b/core/package.json
@@ -32,7 +32,7 @@
     "@vue/babel-preset-jsx": "^1.2.4",
     "babel-loader": "^8.2.2",
     "compression-webpack-plugin": "^7.1.2",
-    "core-js": "3.9.1",
+    "core-js": "^3.25.5",
     "css-loader": "^5.0.2",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "eslint": "^7.21.0",
